Sat Oct 19 16:09:55 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	For reference, this takes CVS's text segment from 348348 bytes to
	347420 bytes.
	* server.c (requests): Change Directory to rq_essential
	per change in doc/cvsclient.texi.
	* client.c: Remove use_directory and all code which executed if
	it wasn't set.  This includes the get_short_pathname function.
	* server.c: Likewise, for use_dir_and_repos.
	(serve_repository): Give a fatal error.
	* server.c (requests): Remove Lost.  Change Unchanged to rq_essential.
	(serve_lost): Removed.
	* server.c, server.h, client.c, vers_ts.c: Remove use_unchanged,
	code to set it, and all code which executed if it wasn't set.

Sat Oct 19 12:44:08 1996  J. Richard Sladkey  <jrs@world.std.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* hash.c (sortlist, new function qsort_comp): Rewrite to use qsort
	instead of insert sort.  Changes algorithm from n^2 to n log n
	(assuming qsort is implemented with quicksort or similar).

Sat Oct 19 12:44:08 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basic2): In test basic2-64, use -x and specify types
	which exclude E; the test is not built to deal with E (or any
	other new types).

Sat Oct 19 12:00:00 1996  Mark Mitchell <mmitchell@usa.net>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (isemptydir, new function isremoved): Avoid pruning
	directories that contain files marked for removal but not
	comitted.
	* update.c, update.h (isemptydir): Now extern, not static.
	* update.c (isemptydir): New parameter might_not_exist handles
	difference in functionality from old client_isemptydir.  Bring
	over the improved error checking from client_isemptydir.
	* client.c (client_isemptydir): Removed; isemptydir now suffices.
	* update.c (update_dirleave_proc), client.c
	(process_prune_candidates): Update callers.
	* sanity.sh (deep): Add tests deep-rm* for above fix.

Fri Oct 18 15:53:41 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
