@@ -40,25 +40,55 @@ struct admin_file {
 };
 
 static const char *const loginfo_contents[] = {
-    "# The \"loginfo\" file is used to control where \"cvs commit\" log information is\n",
-    "# sent.  The first entry on a line is a regular expression which is tested\n",
+    "# The \"loginfo\" file is used to control where \"cvs commit\" log information\n"
+    "# is sent.  The first entry on a line is a regular expression which is tested\n",
     "# against the directory that the change is being made to, relative to the\n",
-    "# $CVSROOT.  For the first match that is found, the remainder of the line is a\n",
-    "# filter program that should expect log information on its standard input\n",
+    "# $CVSROOT.  If a match is found, then the remainder of the line is a filter\n",
+    "# program that should expect log information on its standard input.\n",
     "#\n",
-    "# If the repository name does not match any of the regular expressions in the\n",
-    "# first field of this file, the \"DEFAULT\" line is used, if it is specified.\n",
+    "# If the repository name does not match any of the regular expressions in this\n",
+    "# file, the \"DEFAULT\" line is used, if it is specified.\n",
     "#\n",
-    "# If the name \"ALL\" appears as a regular expression it is always used\n",
-    "# in addition to the first matching regex or \"DEFAULT\".\n",
+    "# If the name ALL appears as a regular expression it is always used\n",
+    "# in addition to the first matching regex or DEFAULT.\n",
     "#\n",
-    "# The filter program may use one and only one \"%s\" modifier (ala printf).  If\n",
-    "# such a \"%s\" is specified in the filter program, a brief title is included\n",
-    "# (as one argument, enclosed in single quotes) showing the relative directory\n",
-    "# name and listing the modified file names.\n",
+    "# The user may specify a format string (a la printf) as part of the\n",
+    "# filter.  The string is composed of a `%' followed by a space, or\n",
+    "# followed by a single format character, or followed by a set of format\n",
+    "# characters surrounded by `{' and `}' as separators.  The format\n",
+    "# characters are:\n",
     "#\n",
+    "#   s = file name\n",
+    "#   V = old version number (pre-checkin)\n",
+    "#   v = new version number (post-checkin)\n",
+    "#\n",
+    "# For example, valid format strings are:\n",
+    "#\n",
+    "#   %\n",
+    "#   %s\n",
+    "#   %{s}\n",
+    "#   %{sVv}\n",
+    "#\n",
+    "# If a space appears after the `%' character (that is, the percent sign\n",
+    "# appears by itself), only the name of the repository will be generated.\n",
+    "#	 \n",
+    "# The output will be a string of tokens separated by spaces.  For\n",
+    "# backwards compatibility, the the first token will be the repository\n",
+    "# name.  The rest of the tokens will be comma-delimited lists of the\n",
+    "# information requested in the format string.  For example, if\n",
+    "# `/u/src/master' is the repository, `%{sVv}' is the format string, and\n",
+    "# three files (ChangeLog, Makefile, foo.c) were modified, the output\n",
+    "# might be:\n",
+    "#\n",
+    "#   /u/src/master ChangeLog,1.1,1.2 Makefile,1.3,1.4 foo.c,1.12,1.13\n",
+    "#\n",
+    "# Why this duplicates the old behavior when the format string is\n",
+    "# `%s' is left as an exercise for the reader.\n",
+    "# \n",
     "# For example:\n",
-    "#DEFAULT		(echo \"\"; who am i; echo %s; date; cat) >> $CVSROOT/CVSROOT/commitlog\n",
+    "#DEFAULT (echo \"\"; id; echo %s; date; cat) >> $CVSROOT/CVSROOT/commitlog\n",
+    "# or\n",
+    "#DEFAULT (echo \"\"; id; echo %{sVv}; date; cat) >> $CVSROOT/CVSROOT/commitlog\n",
     NULL
 };
 
