@@ -1,3 +1,10 @@
+Tue Oct 22 10:37:37 1996  Noel Cragg  <noel@gargle.rain.org>
+
+	* mkmodules.c: change loginfo_contents to include a description of
+ 	the new format string.
+
+	* logmsg.c (logfile_write): change syntax of format string.
+
 Sat Oct 19 16:09:55 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	For reference, this takes CVS's text segment from 348348 bytes to
